TP2 bootstrap presque fini

--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,69 @@
     font-family: 'My Lucida', Console;
 }
 
+
+@media(max-width: 600px){
+    .recherche{
+        display: none;
+    }
+}
+
+@media(max-width: 600px){
+    .share{
+        display: none;
+    }
+}
+
+
+.navbar-light .navbar-toggler {
+  color: rgba(0,0,0,.5);
+  border-color: rgba(0,0,0,.1);
+}
+.navbar-light .navbar-toggler-icon {
+  background-image: url([svg]);
+}
+@media (min-width:992px){
+    .navbar-toggler.toggler-example {
+    cursor: pointer;
+    }
+}
+
+
+
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border:0;
+}
+.navbar-togglw-icon{
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat 50%;
+    background-size: 100% 100%;
+}
+@media (min-width:992px) {
+  .navbar-expand-lg .navbar-collapse {
+    display: -ms-flexbox!important;
+    display: flex!important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+}
+
+
+
+
 body {
     background: linear-gradient(to bottom, #efefef, white) no-repeat;
 }
@@ -54,13 +117,13 @@ main article {
 h3 {
     color: #b8c3c9;
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 0.7em
     font-weight: normal;
     margin-bottom: 10px;
 }
 
 nav ul li a { 
-    font-size: 14px;
+    font-size: 0.875em;
     font-weight: normal;
     color: #828c92;
 }
@@ -85,24 +148,26 @@ nav ul li:last-child {
 
 h1 {
     color: #4b5c66;
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: normal;
     margin: 0 0 8px 0;
 }
 
 .name p { 
     color: #a0aab1;
-    font-size: 12px;
+    font-size: 0.75em;
 }
 
 .name p img { 
     margin-left: 12px;
 }
 
-
+.links  {
+    margin-left: 350px;
+}
 .stats-links {
     color: #4b5c66;
-    font-size: 12px;
+    font-size: 0.75em
     padding: 15px 0px 10px 0px;
     border-bottom: 1px solid #e1e6e9;
     margin-bottom: 20px;
@@ -117,13 +182,13 @@ h1 {
 }
 
 .stats-links a {
-    font-size: 12px;
+    font-size: 0.75em;
     font-weight: normal;
     color: #4b5c66;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: normal;
     color: #4b5c66;
 }
@@ -137,7 +202,7 @@ input.search {
     box-shadow: none;
     height: 28px;
     width: 100%;
-    font-size: 13px;
+    font-size: 0.8em;
     padding: 3px 6px 3px 25px;
     border: 1px solid #d0dde9;
     margin: 0;
@@ -151,7 +216,7 @@ input.submit {
 }
 
 .station {
-    font-size: 12px;
+    font-size: 0.75em;
     color: #008fd5;
     border-radius: 5px;
     border: 1px solid #b8c3c9;
@@ -170,7 +235,7 @@ input.submit {
 
 
 #albums article {
-    font-size: 13px;
+    font-size: 0.8em;
     color: #89949b;
     margin: 10px 0;
 }
@@ -216,6 +281,8 @@ nav a.new { background: url("../img/icon/new.png") no-repeat 0px; }
 nav a.collection { background: url("../img/icon/collection.png") no-repeat 0px; }
 nav a.history { background: url("../img/icon/history.png") no-repeat 0px; }
 
-
+.color-mob-navbar{
+    color: white;
+}
 
 
