--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,23 @@
 }
 
 
+@media screen and (max-width: 1400px){
+    .body{
+        font-size: 2.5em;
+    }
+}
+@media screen and (max-width: 600px){
+    .body{
+        font-size: 2.5em;
+    }
+}
+@media screen and (max-width: 450px){
+    .body{
+        font-size: 2.5em;
+    }
+}
+
+
 .navbar-light .navbar-toggler {
   color: rgba(0,0,0,.5);
   border-color: rgba(0,0,0,.1);
@@ -58,6 +75,7 @@
     background: no-repeat 50%;
     background-size: 100% 100%;
 }
+
 @media (min-width:992px) {
   .navbar-expand-lg .navbar-collapse {
     display: -ms-flexbox!important;
